--- a/Report/latex/citations.bib
+++ b/Report/latex/citations.bib
@@ -9,3 +9,50 @@ year={2023},
 month={02},
 pages={5--7},
 }%This is an EXAMPLE merely for ensuring the biblatex code is working as expected.
+
+@online{BinaryStudy2021,
+author={BinaryStudy},
+title={How to Load, Preprocess, Visualize CIFAR-10 and CIFAR-100},
+url={https://www.binarystudy.com/2021/09/how-to-load-preprocess-visualize-CIFAR-10-and-CIFAR-100.html},
+journal={Binary Study},
+year={2021},
+month={09},
+}
+
+@misc{singer2023textto4d,
+title={Text-To-4D Dynamic Scene Generation}, 
+author={Uriel Singer and Shelly Sheynin and Adam Polyak and Oron Ashual and Iurii Makarov and Filippos Kokkinos and Naman Goyal and Andrea Vedaldi and Devi Parikh and Justin Johnson and Yaniv Taigman},
+year={2023},
+eprint={2301.11280},
+archivePrefix={arXiv},
+primaryClass={cs.CV}
+}
+
+@misc{wu2022nuwainfinity,
+title={NUWA-Infinity: Autoregressive over Autoregressive Generation for Infinite Visual Synthesis}, 
+author={Chenfei Wu and Jian Liang and Xiaowei Hu and Zhe Gan and Jianfeng Wang and Lijuan Wang and Zicheng Liu and Yuejian Fang and Nan Duan},
+year={2022},
+eprint={2207.09814},
+archivePrefix={arXiv},
+primaryClass={cs.CV}
+}
+
+@online{diffusionModel,
+author={Steins},
+title={Diffusion Model Clearly Explained!},
+url={https://medium.com/@steinsfu/diffusion-model-clearly-explained-cd331bd41166},
+urldate = {2023-05-11},
+year={2022},
+month={12},
+}
+
+@online{cifar,
+author={Krizhevsky, Alex}, 
+title={CIFAR-10 and CIFAR-100 datasets},
+url={https://www.cs.toronto.edu/~kriz/cifar.html}, 
+journal={University of Toronto, Department of Computer Science},
+publisher={University of Toronto},
+year={2023},
+month={05},
+urldate={2023-05-12},
+}
